--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,8 @@ requires-python = ">=3.8, <3.11"
 license = { text = 'Apache License 2.0' }
 classifiers = [
     "Operating System :: Microsoft :: Windows",
+    "Operating System :: Unix",
+    "Operating System :: MacOS :: MacOS",
     "Operating System :: POSIX :: Linux",
     "Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: 3.9",
@@ -56,10 +58,6 @@ doc = [
     "sphinx-rtd-theme==1.3.0",
     "sphinx-tabs==3.4.1",
     "enum-tools[sphinx]",
-
-    # https://graphviz.org/download/#windows
-    # sudo apt install pandoc
-    # sudo apt install graphviz
 ]
 
 [project.urls]
