--- a/src/XRFeitoriaUnreal/XRFeitoriaUnreal.uplugin
+++ b/src/XRFeitoriaUnreal/XRFeitoriaUnreal.uplugin
@@ -1,13 +1,13 @@
 {
 	"FileVersion": 3,
 	"Version": 1,
-	"VersionName": "1.0",
+	"VersionName": "0.5.0",
 	"FriendlyName": "XRFeitoriaUnreal",
-	"Description": "",
-	"Category": "Other",
-	"CreatedBy": "",
+	"Description": "OpenXRLab Synthetic Data Rendering Toolbox",
+	"Category": "Scripting",
+	"CreatedBy": "OpenXRLab",
 	"CreatedByURL": "",
-	"DocsURL": "",
+	"DocsURL": "https://xrfeitoria.readthedocs.io/en/latest/",
 	"MarketplaceURL": "",
 	"SupportURL": "",
 	"CanContainContent": true,
