--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,8 @@ requires-python = ">=3.8, <3.11"
 license = { text = 'Apache License 2.0' }
 classifiers = [
     "Operating System :: Microsoft :: Windows",
+    "Operating System :: Unix",
+    "Operating System :: MacOS :: MacOS",
     "Operating System :: POSIX :: Linux",
     "Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: 3.9",
@@ -32,6 +34,7 @@ dependencies = [
     "fake-bpy-module-latest",
     "numpy>=1,<2",
     "loguru<1",
+    "packaging>=23,<24",
     "pydantic>=2,<3",
     "psutil>=5,<6",
     "rich>=13,<14",
@@ -56,15 +59,12 @@ doc = [
     "sphinx-rtd-theme==1.3.0",
     "sphinx-tabs==3.4.1",
     "enum-tools[sphinx]",
-
-    # https://graphviz.org/download/#windows
-    # sudo apt install pandoc
-    # sudo apt install graphviz
 ]
 
 [project.urls]
 "Homepage" = "https://github.com/openxrlab/xrfeitoria"
 "Bug Tracker" = "https://github.com/openxrlab/xrfeitoria/issues"
+"Documentation" = "https://xrfeitoria.readthedocs.io/en/latest/"
 
 [project.scripts]
 xf-render = "xrfeitoria.cmd.render:app"
