--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,7 +45,7 @@ dependencies = [
 dynamic = ['version']
 
 [project.optional-dependencies]
-all = ["xrfeitoria[doc]"]
+all = ["xrfeitoria[doc,vis]"]
 doc = [
     "autodoc_pydantic==2.0.1",
     "docutils",
@@ -59,6 +59,10 @@ doc = [
     "sphinx-rtd-theme==1.3.0",
     "sphinx-tabs==3.4.1",
     "enum-tools[sphinx]",
+]
+vis=[
+    "opencv-python>=4.8,<5",
+    "flow_vis==0.1",
 ]
 
 [project.urls]
