--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,7 @@ license = { text = 'Apache License 2.0' }
 classifiers = [
     "Operating System :: Microsoft :: Windows",
     "Operating System :: Unix",
-    "Operating System :: MacOS :: MacOS",
+    "Operating System :: MacOS",
     "Operating System :: POSIX :: Linux",
     "Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: 3.9",
