--- a/pyproject.toml
+++ b/pyproject.toml
@@ -77,6 +77,7 @@ vis = [
 [project.scripts]
 xf-render = "xrfeitoria.cmd.blender.render:app"
 xf-install-plugin = "xrfeitoria.cmd.blender.install_plugin:app"
+xf-smplx = "xrfeitoria.cmd.blender.vis_smplx:app"
 
 [tool.black]
 line-length = 120
