--- a/src/XRFeitoriaUnreal/XRFeitoriaUnreal.uplugin
+++ b/src/XRFeitoriaUnreal/XRFeitoriaUnreal.uplugin
@@ -1,7 +1,7 @@
 {
 	"FileVersion": 3,
 	"Version": 1,
-	"VersionName": "0.5.1",
+	"VersionName": "0.6.0",
 	"FriendlyName": "XRFeitoriaUnreal",
 	"Description": "OpenXRLab Synthetic Data Rendering Toolbox",
 	"Category": "Scripting",
@@ -17,7 +17,7 @@
 	"Modules": [
 		{
 			"Name": "XRFeitoriaUnreal",
-			"Type": "Runtime",
+			"Type": "Editor",
 			"LoadingPhase": "Default"
 		}
 	],
