- Add export_audio option to RendererUnreal - Optimize Docs for motion - Add support for using face FK (curve)

--- a/src/XRFeitoriaUnreal/XRFeitoriaUnreal.uplugin
+++ b/src/XRFeitoriaUnreal/XRFeitoriaUnreal.uplugin
@@ -35,6 +35,10 @@
 			"Enabled": true
 		},
 		{
+			"Name": "PythonFoundationPackages",
+			"Enabled": true
+		},
+		{
 			"Name": "SequencerScripting",
 			"Enabled": true
 		}
