optimize publish plugin

--- a/src/XRFeitoriaUnreal/XRFeitoriaUnreal.uplugin
+++ b/src/XRFeitoriaUnreal/XRFeitoriaUnreal.uplugin
@@ -6,8 +6,9 @@
 	"Description": "OpenXRLab Synthetic Data Rendering Toolbox",
 	"Category": "Scripting",
 	"CreatedBy": "OpenXRLab",
-	"CreatedByURL": "",
+	"CreatedByURL": "https://openxrlab.org.cn",
 	"DocsURL": "https://xrfeitoria.readthedocs.io/en/latest/",
+	"WhitelistPlatforms":["Win64", "Mac", "Linux"],
 	"MarketplaceURL": "",
 	"SupportURL": "",
 	"CanContainContent": true,
