--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,7 +23,7 @@ jobs:
           command: |
             python3 -m pip install --upgrade pip
             cd $(eval echo $CIRCLE_WORKING_DIRECTORY)
-            pip install .
+            python3 -m pip install .
       # Build the plugins
       - run:
           name: "Build Plugins"
@@ -35,19 +35,14 @@ workflows:
   build-plugins-workflow: # Name of the workflow
     jobs:
       - build-plugins:
-          matrix:
-            parameters:
-              image:
-                # Linux image
-                - ghcr.io/epicgames/unreal-engine:dev-5.3
-                - ghcr.io/epicgames/unreal-engine:dev-5.2
-                - ghcr.io/epicgames/unreal-engine:dev-5.1
-                # Windows image
-                - ghcr.io/epicgames/unreal-engine:runtime-windows
-              unreal_executable:
-                # Linux image
-                - "/home/ue4/UnrealEngine/Engine/Binaries/Linux/UnrealEditor-Cmd"
-                - "/home/ue4/UnrealEngine/Engine/Binaries/Linux/UnrealEditor-Cmd"
-                - "/home/ue4/UnrealEngine/Engine/Binaries/Linux/UnrealEditor-Cmd"
-                # Windows image
-                - "C:/UnrealEngine/Engine/Binaries/Win64/UE4Editor-Cmd.exe"
+          image: "ghcr.io/epicgames/unreal-engine:dev-5.3"
+          unreal_executable: "/home/ue4/UnrealEngine/Engine/Binaries/Linux/UnrealEditor-Cmd"
+      - build-plugins:
+          image: "ghcr.io/epicgames/unreal-engine:dev-5.2"
+          unreal_executable: "/home/ue4/UnrealEngine/Engine/Binaries/Linux/UnrealEditor-Cmd"
+      - build-plugins:
+          image: "ghcr.io/epicgames/unreal-engine:dev-5.1"
+          unreal_executable: "/home/ue4/UnrealEngine/Engine/Binaries/Linux/UnrealEditor-Cmd"
+      - build-plugins:
+          image: "ghcr.io/epicgames/unreal-engine:runtime-windows"
+          unreal_executable: "C:/UnrealEngine/Engine/Binaries/Win64/UE4Editor-Cmd.exe"
