--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,8 +1,5 @@
 version: 2.1
 
-orbs:
-  win: circleci/windows@5.0
-
 jobs:
   build-plugins-linux:
     parameters:
@@ -36,9 +33,8 @@ jobs:
       image:
         type: string
         default: "meihaiyi/ue4-minimal:5.3.2-ltsc2022-vs2022"
-    executor:
-      name: win/default
-      shell: powershell.exe
+    machine: true
+    resource_class: haiyimei/windows-server
     working_directory: ~/project
     steps:
       - checkout
