--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -65,7 +65,7 @@ workflows:
       - build-plugins-windows:
           image: "meihaiyi/ue4-minimal:5.3.2-ltsc2022-vs2022"
           requires:
-            - runner-test
+            - testing
       - build-plugins-linux:
           image: "ghcr.io/epicgames/unreal-engine:dev-5.3"
       - build-plugins-linux:
