--- a/.circleci/continue_config.yml
+++ b/.circleci/continue_config.yml
@@ -125,7 +125,7 @@ workflows:
     when: << pipeline.parameters.run-test >>
     jobs:
       - test-unreal:
-          name: "Run Tests - Linux UE"
+          name: "Run Tests - UE"
           matrix:
             parameters:
               image: ["ghcr.io/epicgames/unreal-engine:dev-5.1", "ghcr.io/epicgames/unreal-engine:dev-5.2", "ghcr.io/epicgames/unreal-engine:dev-5.3"]
